# SewingAssistant

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  SewingAssistant.md  docker-compose.yml  flake.nix  journal.md  main.py  pyproject.toml
backend/: config.py  database.py  main.py  pyproject.toml  pyrightconfig.json
backend/api/: llm.py  materials.py  measurements.py  patterns.py  project_checklist.py  project_core.py  project_images.py  project_materials.py  project_measurements.py  project_patterns.py  projects.py  stores.py
backend/models/: material.py  measurement.py  pattern.py  project.py
backend/repositories/: measurements_repository.py  project_repository.py
backend/scrapers/: material_scraper.py  pattern_scraper.py  simplicity_scraper.py
backend/scrapers/materials/: _prestashop.py  _shopify.py  cleanersupply_scraper.py  fabricville_scraper.py  (+4 more)
backend/services/: llm_service.py  material_service.py  measurements_service.py  pattern_generator.py  project_service.py  store_finder.py
backend/tests/: conftest.py  test_black_snail_scraper.py  test_cleanersupply_scraper.py  test_fabricville_scraper.py  test_fine_fabrics_canada_scraper.py  test_generic_scraper.py  test_laughing_moon_scraper.py  test_material_scraper.py  test_materials_api.py  test_mood_scraper.py  test_pattern_scraper.py  test_patterns_api.py  test_projects_api.py  test_scrapers.py  test_simplicity_scraper.py  test_spool_of_thread_scraper.py  test_store_finder.py  test_the_fabric_club_scraper.py  test_tonitex_scraper.py  test_truly_victorian_scraper.py
(+74 files in other folders)
